--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1878,5 +1878,11 @@ textarea.form-input::-webkit-resizer { display: none; }
 	 */
 
   .timeline-text { max-width: 700px; }
-
+  
+  .skills-logo-grid div p {
+    margin-top: 5px;
+    font-size: 14px;
+    color: #444;
+  }
+  
 }
